fix: semantic HTML, flexbox price alignment, ellipsis for long names, mobile card borders

--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ footer ul {
 
 main a {
   text-decoration: none;
+  color: inherit;
 }
 
 .restaurant-background {
@@ -302,16 +303,19 @@ main a {
   margin-bottom: 54px;
 }
 
-.button-waiting-time {
+.restaurant-waiting-time {
   color: #fff;
   background-color: #262626;
   width: 100px;
   height: 32px;
   border-radius: 16px;
   border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.description-button {
+.restaurant-details {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -340,71 +344,65 @@ main a {
   color: #327430;
 }
 
-.food {
+.snacks {
   padding-top: 56px;
   padding-bottom: 80px;
 }
 
-.food h2 {
+.snacks h2 {
   font-size: 22px;
   font-weight: 400;
 }
 
-.food-header {
+.snacks-header {
   margin-bottom: 32px;
-}
-
-.food-name-first::after {
-  content: "Сельдь на бородинском хлебе";
-  font-size: 16px;
-  line-height: 24px;
-  color: #1d1d1d;
-  margin-bottom: 4px;
-}
-
-#mushrooms::after {
-  content: "Грибы маринованные";
-}
-
-#salo::after {
-  content: "Сало домашнее с горчицей";
-}
-
-#tonque::after {
-  content: "Язык говяжий с хреном";
 }
 
 .additional-description {
   font-size: 13px;
   line-height: 21px;
   color: #626262;
-  margin-bottom: 58px;
+  margin-top: 4px;
 }
 
-.food-card {
-  border: #626262 solid 1px;
-  width: 100%;
+.snacks-card {
+  border: #979797 solid 1px;
+  max-width: 100%;
   height: 160px;
   display: flex;
   justify-content: space-between;
+  min-width: 0;
+  min-height: 0;
 }
 
-.food-description {
+.snacks-description {
   padding: 16px 0px 16px 16px;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  overflow: hidden;
 }
 
-.food-name {
+.snacks-name {
   font-size: 16px;
   line-height: 24px;
   color: #1d1d1d;
-  margin-bottom: 83px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
 }
 
-.food-cards {
+.snacks-cards {
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 49px;
   column-gap: 16px;
+  width: 100%;
+}
+
+.snacks-price {
+  margin-top: auto;
 }
 
 @media screen and (max-width: 1000px) {
@@ -425,13 +423,17 @@ main a {
     width: 432px;
   }
 
-  .food-cards {
+  .snacks-cards {
     grid-template-columns: 1fr;
     gap: 32px;
   }
 
-  .food {
+  .snacks {
     padding-bottom: 48px;
+  }
+
+  .snacks-description {
+    padding-left: 24px;
   }
 }
 
@@ -480,49 +482,26 @@ main a {
     display: none;
   }
 
-  .food-cards {
+  .snacks-cards {
     gap: 16px;
   }
 
-  .food-card {
+  .snacks-card {
     height: 108px;
   }
 
-  .additional-description {
-    margin-bottom: 16px;
-  }
-
-  .food-name {
-    margin-bottom: 41px;
-  }
-
-  .food-header {
+  .snacks-header {
     display: flex;
     justify-content: center;
     margin-bottom: 56px;
   }
-}
 
-@media screen and (max-width: 400px) {
-  .food-name-first::after {
-    content: "Сельдь на бородинском...";
-  }
-}
-
-@media screen and (max-width: 350px) {
-  .food-name-first::after {
-    content: "Сельдь на...";
+  .snacks-description {
+    padding: 0px 0px 15px 0px;
   }
 
-  #mushrooms::after {
-    content: "Грибы маринов...";
-  }
-
-  #salo::after {
-    content: "Сало домашнее...";
-  }
-
-  #tonque::after {
-    content: "Язык говяжий...";
+  .snacks-card {
+    border: none;
+    border-bottom: 1px solid #979797;
   }
 }
